Crisis Response App/objects/Location__c.object
<CustomObject>
    <description>A location associated with the organization</description>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>Impacted location city</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Impact__c</fullName>
        <inlineHelpText>Descriptions of restrictions on larger community (government mandates, encouraged restrictions, etc)</inlineHelpText>
        <label>Community Impact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>Country of Impacted Location</inlineHelpText>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Open_Date__c</fullName>
        <inlineHelpText>Date the the location is expected to re-open to employees and contractors</inlineHelpText>
        <label>Expected Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Close_Date__c</fullName>
        <label>Location Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Email__c</fullName>
        <inlineHelpText>Main email address of location</inlineHelpText>
        <label>Location Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Status__c</fullName>
        <inlineHelpText>Status of the impacted location. Soft close = encouraged not to visit, hard close = individuals not allowed to enter</inlineHelpText>
        <label>Location Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Partial Hours</fullName>
                </value>
                <value>
                    <fullName>Soft Close</fullName>
                </value>
                <value>
                    <fullName>Hard Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <inlineHelpText>Type of building/zone the location is</inlineHelpText>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Headquarters</fullName>
                </value>
                <value>
                    <fullName>Office Building</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Factory/Production</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Construction Site</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Location_Phone__c</fullName>
        <inlineHelpText>Main contact line for the location. If location is closed, ensure this number is a phone that will be answered</inlineHelpText>
        <label>Main Location Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Number_of_Impact_Records__c</fullName>
        <label>Number of Impact Records</label>
        <summaryFilterItems>
            <field>Location_Crisis_Effect__c.Effect_Status__c</field>
            <operation>equals</operation>
            <value>Currently Affected</value>
        </summaryFilterItems>
        <summaryForeignKey>Location_Crisis_Effect__c.Location__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ongoing_Issues__c</fullName>
        <inlineHelpText>High level understanding of what has been occurring at the location.</inlineHelpText>
        <label>Ongoing Issues</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Operating_Hours__c</fullName>
        <inlineHelpText>Current operating hours of the location. (If location is partially open, update the hours to reflect)</inlineHelpText>
        <label>Operating Hours</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this will add the location to the &quot;Office Status&quot; home page component</inlineHelpText>
        <label>Visible on Home Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Level__c</fullName>
        <label>Risk Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Region__c</fullName>
        <inlineHelpText>State/Region of the impacted location</inlineHelpText>
        <label>State/Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <inlineHelpText>Street address of impacted location</inlineHelpText>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <inlineHelpText>Location Zip Code</inlineHelpText>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Location_Type__c</columns>
        <columns>State_Region__c</columns>
        <columns>Location_Status__c</columns>
        <columns>Public__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Non_Open_Locations</fullName>
        <columns>NAME</columns>
        <columns>Location_Type__c</columns>
        <columns>Location_Status__c</columns>
        <columns>State_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location_Status__c</field>
            <operation>equals</operation>
            <value>Partial Hours,Soft Close,Hard Close</value>
        </filters>
        <label>Closed Locations</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>